# HorizonStudy

./: .gitattributes  .gitignore  README.md  env_setter.ps1  plot_graph.py  pyproject.toml  requirements.txt  runthem.txt
Docs/: 000004.Champion-Challenger.md  000006.work_continuation.md  000008_Steps_to_publishing.md  AI_REASONING_AND_RAG_SPEC.md  API_AND_INTEGRATION_GUIDE.md  FUTURE_ROADMAP.md  OPERATIONAL_RUNBOOK.md  PERFORMANCE_BENCHMARK_REPORT.md  TESTING_AND_VALIDATION_STRATEGY.md  TREND_TO_HORIZONSCALE_EVOLUTION.md  lessons_learnt.md
Docs/lib/: config.md  logging.md  scenario_generators.md  utils.md
Docs/older_docs/: 000001.initial_setups.md  000002.very_important_on_black_swan.md  000003.Why_concurrent_was._needed_at_the_moment.md  000005.forecasters.md  000007.WhyXGBootIsSoFast.md  000009.Instructions to Gemini.doc
Docs/pipeline/: 03_data_pipeline.md  04_baseline_forecasting.md  06_turbo_prophet.md  07_baseline_challenger.md  08_model_competition.md  09_risk_reporting.md  10_risk_dashboard.md
Docs/synthetic/: 00_init_db.md  01_generate_master_parquet.md  02_export_monthly_csvs.md
data/synthetic/: horizonscale_synth.db
data/synthetic/sql/: create_tables.sql
learning_by_jupyter/: Untitled.ipynb
src/HorizonScale/lib/: 001learning.py  config.py  logging.py  scenario_generators.py  utils.py
src/HorizonScale/models/: baseline_utils.py
src/HorizonScale/pipeline/: 03_data_pipeline.py  04_baseline_forecasting.py  06_turbo_prophet.py  07_baseline_challenger.py  08_model_competition.py  09_risk_reporting.py  10_risk_dashboard.py
(+6 files in other folders)
